@@ -11,6 +11,12 @@ message.
 For non repeated fields, the size is 1 if the message has the field, 0 otherwise. 
 
 For repeated fields, the size is the number of objects in the array.
+
+For repeated fields, the size can also be assigned to in order to shrink
+or grow the vector.  Numeric types are given a default value of 0 when
+the new size is greater than the existing size.  Character types are
+given a default value of "".  Growing a repeated field in this way is
+not supported for message, group, and enum types.
 }
 \section{Methods}{
 \describe{
@@ -26,5 +32,12 @@ test$size("optional_int32")
 
 test$add("repeated_int32", 1:10)
 test$size("repeated_int32")
+test$repeated_int32
+
+size(test, "repeated_int32") <- 5
+test$repeated_int32
+
+size(test, "repeated_int32") <- 15
+test$repeated_int32
 }
 \keyword{methods}
